# InClassDebye

./: README.md  pyproject.toml
src/inclassdebye/: __init__.py
