[project]
name = "inclassdebye"
version = "0.1.0"
description = ""
authors = [
    {name = "Robin van der Kruit",email = "16153881+rvanderkruit@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "inclassdebye", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
